test: streamline user task QA base test
Removes superfluous methods and generalization from the user task QA base test class.
Reduces the test setup to one broker to keep the test cluster to a minimum.
Makes better use of defaults and provided annotations for test setup and tear down.